[package]
edition = "2021"
name = "ai_forward"
version = "0.1.0"

[dependencies]
bytes = "1.10.0"
colored = "3.0.0"
dashmap = "6.1.0"
eventsource-stream = "0.2.3"
futures = "0.3.31"
futures-core = "0.3.31"
moka = { version = "0.12.10", features = ["future"] }
once_cell = "1.20.2"
quick_cache = { version = "0.6.11", features = ["stats"] }
reqwest = {version = "0.12.12", features = ["json", "rustls-tls", "stream", "http2"], default-features = false}
salvo = {version = "0.76.1", features = ["sse"]}
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
tokio = {version = "1.43.1"}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["chrono"]}
