[package]
edition = "2021"
name = "ai_forward"
version = "0.1.0"

[dependencies]
axum = "0.7"
bytes = "1.10.0"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4.5.35", features = ["derive"]}
dashmap = "6.1.0"
eventsource-stream = "0.2.3"
file-rotate = "0.8.0"
futures = "0.3.31"
futures-core = "0.3.31"
once_cell = "1.20.2"
reqwest = {version = "0.12.12", features = ["json", "rustls-tls", "stream", "http2"], default-features = false}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
sqlx = {version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono"]}
tokio = {version = "1.43.0", features = ["full"]}
tower = "0.4"
tower-http = {version = "0.5", features = ["cors", "trace"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["chrono"]}
