[package]
edition = "2021"
name = "ai_forward"
version = "0.1.0"

[dependencies]
axum = "0.8.4"
bytes = "1.10.1"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4.5.46", features = ["derive"]}
dashmap = "6.1.0"
eventsource-stream = "0.2.3"
file-rotate = "0.8.0"
futures = "0.3.31"
futures-core = "0.3.31"
once_cell = "1.21.3"
reqwest = {version = "0.12.23", features = ["json", "rustls-tls", "stream", "http2"], default-features = false}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
thiserror = "2.0"
tokio = {version = "1.47.1", features = ["full"]}
tower = "0.5.2"
tower-http = {version = "0.6.6", features = ["cors", "trace"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["chrono"]}
